# ChangeLog for app-text/aspell
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/aspell/ChangeLog,v 1.139 2011/10/23 16:48:31 armin76 Exp $

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org> aspell-0.60.6.1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #386883

  17 Oct 2011; Markus Meier <maekke@gentoo.org> aspell-0.60.6.1.ebuild:
  arm stable, bug #386883

  17 Oct 2011; Jeroen Roovers <jer@gentoo.org> aspell-0.60.6.1.ebuild:
  Stable for HPPA (bug #386883).

  14 Oct 2011; Tony Vroon <chainsaw@gentoo.org> aspell-0.60.6.1.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armagedon" El Lazkani
  & Agostino "ago" Sarubbo in bug #386883.

  13 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> aspell-0.60.6.1.ebuild:
  x86 stable wrt bug #386883

*aspell-0.60.6.1 (12 Sep 2011)

  12 Sep 2011; Peter Volkov <pva@gentoo.org> +aspell-0.60.6.1.ebuild:
  Version bump. Ebuild cleanup: dropped CFLAGS filtering (use sane CFLAGS),
  EAPI4, drop .la files.

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> aspell-0.50.5-r4.ebuild,
  aspell-0.60.5.ebuild:
  Drop to ~mips

  13 Jan 2011; Jeroen Roovers <jer@gentoo.org> aspell-0.60.6-r2.ebuild:
  Stable for HPPA (bug #349270).

  10 Jan 2011; Brent Baude <ranger@gentoo.org> aspell-0.60.6-r2.ebuild:
  stable ppc, bug 349270

  09 Jan 2011; Raúl Porcel <armin76@gentoo.org> aspell-0.60.6-r2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #349270

  28 Dec 2010; Markus Meier <maekke@gentoo.org> aspell-0.60.6-r2.ebuild:
  arm stable, bug #349270

  27 Dec 2010; Brent Baude <ranger@gentoo.org> aspell-0.60.6-r2.ebuild:
  stable ppc64, bug 349270

  21 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  aspell-0.60.6-r2.ebuild:
  x86 stable wrt bug #349270

  21 Dec 2010; Markos Chandras <hwoarang@gentoo.org> aspell-0.60.6-r2.ebuild:
  Stable on amd64 wrt bug #349270

  10 Sep 2010; Mark Loeser <halcy0n@gentoo.org> aspell-0.60.5.ebuild:
  Add linguas to IUSE
