@@ -1,6 +1,9 @@
 # ChangeLog for app-text/aspell
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/aspell/ChangeLog,v 1.139 2011/10/23 16:48:31 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/aspell/ChangeLog,v 1.140 2012/01/31 15:50:17 ssuominen Exp $
+
+  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> aspell-0.60.6.1.ebuild:
+  ppc/ppc64 stable wrt #386883
 
   23 Oct 2011; Raúl Porcel <armin76@gentoo.org> aspell-0.60.6.1.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #386883
